# ur_assemble_ui__

./: .gitignore  CMakeLists.txt  README.md  README.md~  mainpage.dox  mainwindow.cpp  mainwindow.h  mainwindow.ui  package.xml  ur_assemble_ui.pro
include/ur_assemble_ui/: main_window.hpp  qnode.hpp
launch/: ur_assemble_ui.launch
src/: main.cpp  main_window.cpp  qnode.cpp
ui/: main_window.ui
